samples/_failures_safe/1761165570_704be4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c83748be.c: In function ‘main’:
./samples/SAFE/__tmp_c83748be.c:158:17: error: expected expression at end of input
  158 |                 if (scanf("%d %d", &start, &end) != 2)
      |                 ^~
./samples/SAFE/__tmp_c83748be.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c83748be.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c83748be.c:158:17: error: expected declaration or statement at end of input
